--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="header">
-            <h1>ШАПКА САЙТА</h1>
+            <h1>ШАПКА</h1>
         </header>
 
         <main class="main">
@@ -17,7 +17,7 @@
         </main>
 
         <footer class="footer">
-            ПОДВАЛ САЙТА
+            ПОДВАЛ
         </footer>
     </body>
 </html>
